add dockerfile and Environment Variables to deploy project in heroku

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,17 +1,9 @@
-spring.data.mongodb.uri=mongodb://localhost:27017/posts-views?readPreference=primary&directConnection=true&ssl=false
-server.port=8081
+spring.data.mongodb.uri=mongodb+srv://${MONGO_USER}:${MONGO_PASSWORD}@kate.16y4l.mongodb.net/posts-views?retryWrites=true&w=majority
+server.port=${PORT}
 
 # === CloudMQP === #
-spring.rabbitmq.virtual-host=qcxbbzoq
-spring.rabbitmq.username=qcxbbzoq
-spring.rabbitmq.password=RpsL3JyZSo4_WmiY_aApSNs2R91oE7uY
+spring.rabbitmq.virtual-host=${RABBIT_HOST}
+spring.rabbitmq.username=${RABBIT_HOST}
+spring.rabbitmq.password=${RABBIT_PASSWORD}
 spring.rabbitmq.host=woodpecker.rmq.cloudamqp.com
 spring.rabbitmq.port=5672
-
-## === RabbitMQ local === #
-#spring.rabbitmq.host=localhost
-#spring.rabbitmq.username=guest
-#spring.rabbitmq.password=guest
-#spring.rabbitmq.virtual_host=/
-#spring.rabbitmq.port=5672
-
